kubernetes/controller/controller.yml
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements; and to You under the Apache License, Version 2.0.

---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: controller
  namespace: openwhisk
  labels:
    name: controller
spec:
  replicas: 1
  serviceName: "controller"
  template:
    metadata:
      labels:
        name: controller
    spec:
      restartPolicy: Always

      affinity:
        # prefer to not run on an invoker node (only prefer because of single node clusters)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: openwhisk-role
                operator: NotIn
                values:
                - invoker
        # prefer to run on a control-plane node
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            preference:
              matchExpressions:
              - key: openwhisk-role
                operator: In
                values:
                - control-plane
        # do not allow more than 1 controller instance to run on a node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: name
                  operator: In
                  values:
                  - controller
            topologyKey: "kubernetes.io/hostname"

      containers:
      - name: controller
        imagePullPolicy: Always
        image: openwhisk/controller
        command: ["/bin/bash", "-c", "COMPONENT_NAME=$(hostname | cut -d'-' -f2) /init.sh `hostname | cut -d'-' -f2`"]
        ports:
        - name: controller
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/ping"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controller-netpol
  namespace: openwhisk
spec:
  podSelector:
    matchLabels:
      name: controller
  ingress:
  # Allow nginx and any pod with access=controller to connect to controller
  - from:
    - podSelector:
        matchLabels:
          name: nginx
    - podSelector:
        matchLabels:
          access: controller
    ports:
     - port: 8080
  # Controllers can connect to each other
  - from:
    - podSelector:
        matchLabels:
          name: controller
    ports:
     - port: 8080
     - port: 2552
